--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "nodejs-hw-mongodb",
   "version": "1.0.0",
+  "type":"module",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "Eugene Khonich <ehonich@gmail.com>",
@@ -15,6 +16,11 @@
     "globals": "^15.13.0"
   },
   "dependencies": {
-    "nodemon": "^3.1.7"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.1",
+    "nodemon": "^3.1.7",
+    "pino-http": "^10.3.0",
+    "pino-pretty": "^13.0.0"
   }
 }
