--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-hw-mongodb",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js"
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "mongoose": "^8.8.3",
     "nodemon": "^3.1.7",
     "pino-http": "^10.3.0",
     "pino-pretty": "^13.0.0"
