--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle docs/openapi.yaml --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
+
   },
   "keywords": [],
   "author": "Eugene Khonich <ehonich@gmail.com>",
@@ -12,6 +16,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.16.0",
+    "@redocly/cli": "^1.27.0",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
     "nodemon": "^3.1.7",
