--- a/swagger/components/responses/404.yaml
+++ b/swagger/components/responses/404.yaml
@@ -21,4 +21,4 @@ content:
           properties:
             message:
               type: string
-              example: 'Contact not found'
+              example: 'Not found'
