--- a/swagger/paths/contacts/{contactId}/get.yaml
+++ b/swagger/paths/contacts/{contactId}/get.yaml
@@ -1,6 +1,6 @@
 tags:
   - Contacts
-summary: Get contact by id
+summary: Get contact
 operationId: getContactById
 description: 'Get one contact by its unique ID'
 security:
@@ -26,11 +26,11 @@ responses:
             - data
           properties:
             status:
-              type: string
-              example: success
+              type: integer
+              example: 200
             message:
               type: string
-              example: 'Contact found'
+              example: 'Successfully patched a contact!'
             data:
               type: object
               $ref: ../../../components/schemas/contact.yaml
