--- a/swagger/components/responses/404.yaml
+++ b/swagger/components/responses/404.yaml
@@ -13,7 +13,7 @@ content:
           example: 404
         message:
           type: string
-          example: '404 Not Found'
+          example: 'Not Found'
         data:
           type: object
           required:
