--- a/swagger/paths/contacts/{contactId}/delete.yaml
+++ b/swagger/paths/contacts/{contactId}/delete.yaml
@@ -30,5 +30,11 @@ responses:
             message:
               type: string
               example: 'Successfully delete a contact!'
+  '400':
+    $ref: ../../../components/responses/400.yaml
+  '401':
+    $ref: ../../../components/responses/401.yaml
+  '403':
+    $ref: ../../../components/responses/403.yaml
   '404':
     $ref: ../../../components/responses/404.yaml
