--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "npm run build-docs",
     "build-docs": "redocly bundle docs/openapi.yaml --ext json -o docs/swagger.json",
     "preview-docs": "redocly preview-docs"
-
   },
   "keywords": [],
   "author": "Eugene Khonich <ehonich@gmail.com>",
@@ -35,6 +34,7 @@
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
-    "pino-http": "^10.3.0"
+    "pino-http": "^10.3.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
