--- a/swagger/paths/contacts/post.yaml
+++ b/swagger/paths/contacts/post.yaml
@@ -14,6 +14,8 @@ requestBody:
         required:
           - name
           - phoneNumber
+          - isFavourite
+          - contactType
         properties:
           name:
             description: 'Contact name'
@@ -27,7 +29,7 @@ requestBody:
             description: 'Contact email'
             type: string
             example: 'johndoe@email.com'
-          isFavorite:
+          isFavourite:
             description: 'Contact is favorite'
             type: boolean
             example: true
